# effective_llm_alignment

./: .gitignore  README.md  pyproject.toml
accelerate/: fsdp_full_config.yaml  fsdp_full_config_gemma3.yaml  fsdp_gradop_config.yaml  fsdp_gradop_config_gemma3.yaml  multigpu_dp_config.yaml  stage2_config.yaml  stage3_config.yaml  tp_config.yaml
deepspeed_configs/: ds_config_stage_2.json  ds_config_stage_3.json
scripts/: batched_openai_generation.py  cpo.py  dpo.py  gradio_openai_chatbot.py  merge_adapters.py  orpo.py  reward_modeling.py  sft.py  smpo.py  vllm_rm_rejection_sampling.py  vllm_rm_scoring.py  vllm_rm_scoring_gusev.py  vlm.py
scripts/inference/: batched_generation.py  rm_rejection_sampling.py
scripts/model_training/: classification.py  cpo.py  dpo.py  gmpo.py  gpo.py  orpo.py  rewards.py  sft.py  smpo.py
scripts/original/: run_classification.py  run_clip.py  run_ner.py  sts_train.py
scripts/post_training/: mergekit_example_config.yaml
scripts/prompts_training/: reward.py  sft.py
scripts/training/: classification.py  cpo.py  distill.py  dpo.py  orpo.py  reward_modeling.py  sft.py  smpo.py
src/: __init__.py
src/callbacks/: attr_scheduling.py  efficiency_callback.py  generate_examples.py  training_parameters_callback.py
src/collators/: completions_only.py
src/configs/: classificaion_config.py  common_script_args.py  gpo_config.py  prompts_optimization_comfig.py  smpo_config.py
src/configs/additional/: classification_args.py  (+8 more)
src/trainers/: classification_trainer.py  gmpo_trainer.py  gpo_trainer.py  smpo_trainer.py
src/utils/: array_utils.py  datasets.py  embeddings_utils.py  logger.py  model_preparation.py  yaml_args_parser.py
training_configs/classification/: controllable-clf-qwen-1.5b-no-tags-full.yaml
training_configs/preference/: rpo-sigmoid-llama-3-lora-best-rs.yaml  simpo-llama-3.1-lora-best-rs.yaml  slic-llama-3-lora-best-rs.yaml  smpo-llama-3.1-lora-best-rs.yaml  smpo-mistral-nemo-lora-best-rs.yaml  smpo-phi4-lora-best-rs-v1.yaml  smpo-phi4-lora-best-rs-v12.yaml  smpo-phi4-lora-best-rs-v14.yaml  smpo-phi4-lora-best-rs-v2.yaml  smpo-phi4-lora-best-rs-v3.yaml  smpo-phi4-lora-best-rs-v4.yaml  smpo-phi4-lora-best-rs-v7.yaml  smpo-phi4-lora-best-rs-v9.yaml  smpo-phi4-lora-best-rs.yaml  smpo-qvikhr2.5-1.5b-lora-best-rs.yaml  sppo-llama-3-lora-best-rs.yaml
training_configs/prompts-tuning/: controllable-rm-qwen-1.5b-no-init.yaml  controllable-rm-qwen-1.5b.yaml
training_configs/reward/: controllable-rm-qwen-1.5b-no-tags-full.yaml  controllable-rm-qwen-1.5b-no-tags-lora.yaml  controllable-rm-qwen-3b-no-tags-full.yaml  controllable-rm-qwen-7b-no-tags-full.yaml  controllable-rm-qwen-7b-no-tags-lora.yaml  rm-llama-3-fsfairx-lora-arena.yaml  rm-llama-3.1-8b-it-lora-arena.yaml  rm-llama-3.1-8b-lora-arena.yaml  rm-qwen-14b-v2.yaml
training_configs/sft/: sft-gemma-2-2b-it-lora-ficbook.yaml  sft-llama-3.1-8b-it-full-Grandmaster.yaml  sft-llama-3.1-8b-it-lora-GRAG.yaml  sft-llama-3.1-8b-it-lora-GrandmasterRAG-v1.yaml  sft-mistral-nemo-12b-lora-GrandmasterRAG-v1.yaml  sft-phi4-full-GrandmasterRAG-v2.yaml  sft-phi4-lora-GrandmasterRAG-v2.yaml  sft-phi4-lora-GrandmasterRAG-v4.yaml  sft-yandex-lora-GrandmasterRAG.yaml
(+3 files in other folders)
