[tool.poetry]
name = "llm_alignment_playground"
version = "0.1.0"
description = "Customizable workspace for MLC"
authors = ["Sergei Bratchikov <hivaze.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
datasets = "^2.19.1"
tokenizers = "0.19.1"
loguru = "^0.7.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
wandb = "^0.17.6"
evaluate = "^0.4.2"
transformers = "^4.44.0"
accelerate = "^0.33.0"
peft = "^0.12.0"
s3cmd = "^2.4.0"
clearml = "^1.16.1"
torch = "==2.4.0"
deepspeed = {platform = 'linux', version = "==0.14.5"}
sentence-transformers = "^3.0.1"
trl = "==0.10.1"
vllm = {platform = 'linux', version='==0.6.0'}
xformers = {platform = 'linux', version='==0.0.27.post2'}
tabulate = "^0.9.0"
orjson = "==3.10.7"
gradio = "==4.43.0"
dvc = "==3.53.1"
liger-kernel = "0.3.0"
huggingface-hub = "^0.24.6"
openai = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
