[tool.poetry]
name = "llm_alignment_playground"
version = "0.1.0"
description = "Fine-Tuning Engine"
authors = ["Sergei Bratchikov <hivaze.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
pandas = "^2.2.1"
datasets = "^2.19.1"
tokenizers = "==0.21.0"
loguru = "^0.7.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
wandb = "^0.17.6"
evaluate = "^0.4.2"
transformers = "==4.47.0"
accelerate = "^1.2.1"
peft = "^0.12.0"
s3cmd = "^2.4.0"
clearml = "^1.16.1"
torch = "==2.5.1"
deepspeed = {platform = 'linux', version = "==0.14.5"}
sentence-transformers = "^3.0.1"
trl = "==0.13.0"
vllm = {platform = 'linux', version="==0.6.5"}
xformers = {platform = 'linux', version="==0.0.28.post3"}
tabulate = "^0.9.0"
orjson = "==3.10.7"
gradio = "==4.43.0"
dvc = "==3.53.1"
liger-kernel = {platform = 'linux', version='^0.3.1'}
huggingface-hub = "^0.24.6"
openai = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
